--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,20 @@
         <module>slimeworldmanager-importer</module>
         <module>slimeworldmanager-nms-v1_9_R1</module>
         <module>slimeworldmanager-nms-v1_9_R2</module>
-        <module>slimeworldmanager-nms-v1_10_R1</module>
         <module>slimeworldmanager-nms-v1_11_R1</module>
         <module>slimeworldmanager-nms-v1_12_R1</module>
-        <module>slimeworldmanager-nms-v1_13_R1</module>
-        <module>slimeworldmanager-nms-v1_13_R2</module>
-        <module>slimeworldmanager-nms-v1_14_R1</module>
         <module>slimeworldmanager-classmodifier</module>
-        <module>slimeworldmanager-nms-v1_15_R1</module>
     </modules>
 
     <repositories>
+        <repository>
+            <id>nms-repo</id>
+            <url>https://repo.codemc.io/repository/nms/</url>
+        </repository>
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.stellardrift.ca/repository/snapshots/</url>
+        </repository>
         <repository>
             <id>glaremasters</id>
             <url>https://repo.glaremasters.me/repository/concuncan/</url>
@@ -46,7 +49,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
+            <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -85,33 +88,33 @@
         </plugins>
   </build>
 
-  <profiles>
-      <profile>
-          <id>release</id>
-          <build>
-              <plugins>
-                  <plugin>
-                      <groupId>cy.github</groupId>
-                      <artifactId>github-release-plugin</artifactId>
-                      <version>0.5.1</version>
-                      <configuration>
-                          <tagName>${project.version}</tagName>
-                          <releaseTitle>${project.artifactId}-${project.version}</releaseTitle>
-                          <serverId>github</serverId>
-                      </configuration>
-                      <executions>
-                          <execution>
-                              <goals>
-                                  <goal>gh-upload</goal>
-                              </goals>
-                              <phase>deploy</phase>
-                          </execution>
-                      </executions>
-                  </plugin>
-              </plugins>
-          </build>
-      </profile>
-  </profiles>
+<!--  <profiles>-->
+<!--      <profile>-->
+<!--          <id>release</id>-->
+<!--          <build>-->
+<!--              <plugins>-->
+<!--                  <plugin>-->
+<!--                      <groupId>cy.github</groupId>-->
+<!--                      <artifactId>github-release-plugin</artifactId>-->
+<!--                      <version>0.5.1</version>-->
+<!--                      <configuration>-->
+<!--                          <tagName>${project.version}</tagName>-->
+<!--                          <releaseTitle>${project.artifactId}-${project.version}</releaseTitle>-->
+<!--                          <serverId>github</serverId>-->
+<!--                      </configuration>-->
+<!--                      <executions>-->
+<!--                          <execution>-->
+<!--                              <goals>-->
+<!--                                  <goal>gh-upload</goal>-->
+<!--                              </goals>-->
+<!--                              <phase>deploy</phase>-->
+<!--                          </execution>-->
+<!--                      </executions>-->
+<!--                  </plugin>-->
+<!--              </plugins>-->
+<!--          </build>-->
+<!--      </profile>-->
+<!--  </profiles>-->
 
   <distributionManagement>
         <repository>
